{
    "name": "Player1",
    "maps": [
        {
            "name": "Player",
            "id": "4c4a6c9e-a075-4b51-9796-5f455ca7fcfc",
            "actions": [
                {
                    "name": "MoveHorizontal",
                    "type": "PassThrough",
                    "id": "442c6b2c-93f9-4080-a3db-4a1dbc51a8d2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Crouch",
                    "type": "PassThrough",
                    "id": "d74210fe-7d97-4312-8c6d-9aea86d82cf0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "PassThrough",
                    "id": "1edb26c6-3c45-4a89-ba39-083e48fdb1f3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Punch",
                    "type": "Button",
                    "id": "3aac54a2-e1dc-45cf-8185-69e5b4729072",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Kick",
                    "type": "PassThrough",
                    "id": "24a4406d-29b0-4902-82c1-6673b8bf8f28",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "1f58ec6a-56f3-441a-b632-0d1815974d2a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "739a4814-efc0-402a-8aa0-688b443d97fd",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "ac342129-3b45-4733-bf74-97aa7739b534",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "d45c6420-a5f1-44ca-8b2e-16af5424f62c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c4b33b2e-a59b-41ed-b738-458f2e219b7a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "03a5167d-d4ab-4c7c-9379-151d490e4bf8",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0a954a5-2277-4aab-9f30-57d67798b928",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Punch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2edf086a-617d-4071-a8a1-7e6cf39b92d0",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Kick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f56adcf-5bef-4339-85a4-4f7e04e8ff68",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}